--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Thejas Sai Pulikallu</title>
-    <link rel="stylesheet" href="CSS/master.css">
+    <link rel="stylesheet" href="master.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Righteous|Sacramento&display=swap" rel="stylesheet">
     <style media="screen">
