--- a/home.html
+++ b/home.html
@@ -112,7 +112,7 @@
             </td>
             <td class="info">
               <h3 class="sub-t"><a href="https://thejassai.github.io/Quick-quiz/">Quick Quiz</a></h3>
-              <p>Test your general knowlwdgw now. Answer 10 questions and see what you can score.</p>
+              <p>Test your general knowledge now. Answer 10 questions and see what you can score.</p>
             </td>
           </tr>
         </table>
