--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is my oersonal site. I am open to work and looking for job roles like web developer, full stack web developer, MEAN stack web developer."/>
     <title>Thejas Sai Pulikallu</title>
     <link rel="stylesheet" href="master.css">
     <link rel="icon" href="favicon.ico">
@@ -12,15 +14,15 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top_c" src="images/cloud.png">
+      <img class="top_c" src="images/cloud.png" alt="cloud-pic">
       <h1>I'm Thejas Sai.</h1>
       <p>a fullstack <sapn style="color:#f75f00;">web</sapn> developer.</p>
-      <img class="bottom_c" src="images/cloud.png">
-      <img class="land" src="images/land.svg" alt="">
+      <img class="bottom_c" src="images/cloud.png" alt="cloud-pic">
+      <img class="land" src="images/land.svg" alt="mountains-bg-pic">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile-pic" src="images/profile.jpg" alt="">
+        <img class="profile-pic" src="images/profile.jpg" alt="mypic">
         <h2>Hello.</h2>
         <p>I'm a web designer/ developer based in Waterloo, Canada. I have a passion for web development and love to create for web and mobile devices.</p>
       </div>
@@ -32,7 +34,7 @@
             <tr>
               <td>
                 <div class="img-container" style="background-color: skyblue;">
-                  <img class="des" src="images/design.png" alt="">
+                  <img class="des" src="images/design.png" alt="design-pic">
                 </div>
               </td>
               <td class="info">
@@ -51,7 +53,7 @@
               </td>
               <td>
                 <div class="img-container" style="background-color: lightgreen;">
-                  <img class="dev" src="images/www.png" alt="">
+                  <img class="dev" src="images/www.png" alt="developer-pic">
                 </div>
               </td>
             </tr>
@@ -92,7 +94,7 @@
           <tr>
             <td>
               <div class="img-container" style="background-color: #fc6a03;">
-                <img class="des" src="images/network.png" alt="">
+                <img class="des" src="images/network.png" alt="social-network-pic">
               </div>
             </td>
             <td class="info">
@@ -107,7 +109,7 @@
           <tr>
             <td>
               <div class="img-container" style="background-color: yellow;">
-                <img class="des" src="images/quiz.png" alt="">
+                <img class="des" src="images/quiz.png" alt="quiz-pic">
               </div>
             </td>
             <td class="info">
