--- a/home.html
+++ b/home.html
@@ -98,8 +98,8 @@
               </div>
             </td>
             <td class="info">
-              <h3 class="sub-t"><a href="https://sricap.herokuapp.com/login">Spacebook</a></h3>
-              <p>Spacebook is a socialnetworking site. Post your thoughts and meet new people.</p>
+              <h3 class="sub-t"><a href="https://spacebookmedia.herokuapp.com">Spacebook</a></h3>
+              <p>Spacebook is a social media site. Post your thoughts and meet new people.</p>
             </td>
           </tr>
         </table>
