--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <div class="top-container">
       <img class="top_c" src="images/cloud.png" alt="cloud-pic">
       <h1>I'm Thejas Sai.</h1>
-      <p>a fullstack <sapn style="color:#f75f00;">web</sapn> developer.</p>
+      <p>a <sapn style="color:#f75f00;">web</sapn> developer.</p>
       <img class="bottom_c" src="images/cloud.png" alt="cloud-pic">
       <img class="land" src="images/land.svg" alt="mountains-bg-pic">
     </div>
