--- a/home.html
+++ b/home.html
@@ -135,7 +135,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="">Website</a>
       <p class="copyright">© 2020 Thejas Sai Pulikallu. All rights reserved.</p>
     </div>
   </body>
